--- a/solution/plugin_ogl.vcxproj
+++ b/solution/plugin_ogl.vcxproj
@@ -58,7 +58,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;DEBUG;CU_OGL_BUILD;GLEW_BUILD;GLEW_NO_GLU;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\engine\include;..\plugins\render_ogl\src;..\plugins\render_ogl\glew\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\engine\include;..\plugins\render_ogl\glew\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
     </ClCompile>
@@ -74,7 +74,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;NDEBUG;CU_OGL_BUILD;GLEW_BUILD;GLEW_NO_GLU;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\engine\include;..\plugins\render_ogl\src;..\plugins\render_ogl\glew\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\engine\include;..\plugins\render_ogl\glew\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -91,15 +91,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\plugins\render_ogl\OGL_API.h" />
+    <ClInclude Include="..\plugins\render_ogl\OGL_Plugin.h" />
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\glew.h" />
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\glxew.h" />
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\wglew.h" />
-    <ClInclude Include="..\plugins\render_ogl\src\OGL_API.h" />
-    <ClInclude Include="..\plugins\render_ogl\src\OGL_Plugin.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\plugins\render_ogl\OGL_Plugin.cpp" />
     <ClCompile Include="..\plugins\render_ogl\glew\src\glew.c" />
-    <ClCompile Include="..\plugins\render_ogl\src\OGL_Plugin.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
