--- a/solution/plugin_ogl.vcxproj.filters
+++ b/solution/plugin_ogl.vcxproj.filters
@@ -9,6 +9,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\plugins\render_ogl\OGL_API.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\plugins\render_ogl\OGL_Plugin.h">
+      <Filter>src</Filter>
+    </ClInclude>
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\glew.h">
       <Filter>glew</Filter>
     </ClInclude>
@@ -18,19 +24,13 @@
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\wglew.h">
       <Filter>glew</Filter>
     </ClInclude>
-    <ClInclude Include="..\plugins\render_ogl\src\OGL_API.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\plugins\render_ogl\src\OGL_Plugin.h">
-      <Filter>src</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\plugins\render_ogl\OGL_Plugin.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
     <ClCompile Include="..\plugins\render_ogl\glew\src\glew.c">
       <Filter>glew</Filter>
-    </ClCompile>
-    <ClCompile Include="..\plugins\render_ogl\src\OGL_Plugin.cpp">
-      <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
