--- a/solution/engine.vcxproj
+++ b/solution/engine.vcxproj
@@ -91,6 +91,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\engine\include\AABox.h" />
     <ClInclude Include="..\engine\include\API.h" />
     <ClInclude Include="..\engine\include\AcceptChannel.h" />
     <ClInclude Include="..\engine\include\Acceptor.h" />
@@ -150,6 +151,7 @@
     <ClInclude Include="..\engine\include\NetEvent.h" />
     <ClInclude Include="..\engine\include\NetService.h" />
     <ClInclude Include="..\engine\include\Object.h" />
+    <ClInclude Include="..\engine\include\Octree.h" />
     <ClInclude Include="..\engine\include\Packet.h" />
     <ClInclude Include="..\engine\include\PixelFormat.h" />
     <ClInclude Include="..\engine\include\Plane.h" />
@@ -177,6 +179,7 @@
     <ClInclude Include="..\engine\include\Socket.h" />
     <ClInclude Include="..\engine\include\SocketAddress.h" />
     <ClInclude Include="..\engine\include\SocketChannel.h" />
+    <ClInclude Include="..\engine\include\Sphere.h" />
     <ClInclude Include="..\engine\include\Stream.h" />
     <ClInclude Include="..\engine\include\StringPiece.h" />
     <ClInclude Include="..\engine\include\SyncEvent.h" />
@@ -200,6 +203,7 @@
     <ClInclude Include="..\engine\include\WorkQueue.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\engine\src\AABox.cpp" />
     <ClCompile Include="..\engine\src\AcceptChannel.cpp" />
     <ClCompile Include="..\engine\src\Acceptor.cpp" />
     <ClCompile Include="..\engine\src\Animatable.cpp" />
@@ -243,6 +247,7 @@
     <ClCompile Include="..\engine\src\NetEvent.cpp" />
     <ClCompile Include="..\engine\src\NetService.cpp" />
     <ClCompile Include="..\engine\src\Object.cpp" />
+    <ClCompile Include="..\engine\src\Octree.cpp" />
     <ClCompile Include="..\engine\src\Packet.cpp" />
     <ClCompile Include="..\engine\src\PixelFormat.cpp" />
     <ClCompile Include="..\engine\src\Plane.cpp" />
@@ -264,6 +269,7 @@
     <ClCompile Include="..\engine\src\Socket.cpp" />
     <ClCompile Include="..\engine\src\SocketAddress.cpp" />
     <ClCompile Include="..\engine\src\SocketChannel.cpp" />
+    <ClCompile Include="..\engine\src\Sphere.cpp" />
     <ClCompile Include="..\engine\src\Stream.cpp" />
     <ClCompile Include="..\engine\src\StringPiece.cpp" />
     <ClCompile Include="..\engine\src\SyncEvent.cpp" />
